--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.confuser</groupId>
     <artifactId>StaffActivity</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <build>
         <finalName>${project.artifactId}</finalName>
         <resources>
@@ -65,6 +65,10 @@
                                 <relocation>
                                     <pattern>com.joestelmach.natty</pattern>
                                     <shadedPattern>me.confuser.staffactivity.natty</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.zaxxer.hikari</pattern>
+                                    <shadedPattern>me.confuser.banmanager.internal.hikari</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -163,6 +167,16 @@
             <groupId>com.joestelmach</groupId>
             <artifactId>natty</artifactId>
             <version>0.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.4</version>
         </dependency>
     </dependencies>
     <properties>
