--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.confuser</groupId>
     <artifactId>StaffActivity</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <build>
         <finalName>${project.artifactId}</finalName>
         <resources>
